style(client): fix line break in creator tag

--- a/client/src/styles/partials/_main.scss
+++ b/client/src/styles/partials/_main.scss
@@ -26,6 +26,7 @@ body {
     cursor: pointer;
     flex-grow: 0;
     flex-shrink: 0;
+    white-space: nowrap;
 
     .creator-inner {
         width: 2rem;
